--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <img src="assets/img/ava_linkedin.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Developer Intern at SAP Asia | Final-year Student at NTU</h3>
+            <h3>Software Engineer Intern at Hope Technik | Developer Intern at SAP Asia | Final-year Student at NTU</h3>
             <p class="font-italic">
               
             </p>
@@ -113,7 +113,6 @@
 
         <div class="section-title">
           <h2>Skills and Technologies</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row skills-content">
@@ -193,7 +192,6 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
@@ -235,13 +233,29 @@
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
-            <!-- <div class="resume-item">
-              <h4>Software Engineering Intern at Hope Technik</h4>
-              <h5>May 2020 - Present</h5>
+            <div class="resume-item">
+              <h4>Part-time Software Engineer at Nanyang Technological University</h4>
+              <h5>Dec 2021 - Present</h5>
               <p><em>Singapore </em></p>
               <ul>
+                <li>Migrated Web and API applications from physical server to AWS Cloud Computing Platform </li>
+                <li>Researched, and estimated service cost, and best practices of deployment </li>
+                <li><strong>Tech stack</strong>: Amazon Web Service EC2, RDS, S3, CloudFront</li>
               </ul>
-            </div> -->
+            </div>
+            <div class="resume-item">
+              <h4>Software Engineering Intern at Hope Technik</h4>
+              <h5>May 2021 - Aug 2021</h5>
+              <p><em>Singapore </em></p>
+              <ul>
+                <li>Participated in Project: System for booking and workflow automation process for crematorium (registration, service schedule, store, collection)</li>
+                <li>Wrote NodeJS scripts for workflow simulators to simulate hardware operations</li>
+                <li>Utilized Newman CLI to replace Postman Collection Runner to avoid memory leak</li>
+                <li>Integrated Visionect Joan 6 E-ink displays using Express.js polling server that improved the displays’ response time by 90%</li>
+                <li>Refactored to reduce 70% network usage of API calls of Angular server by utilizing filter parameter of Swagger</li>
+                <li><strong>Tech stack</strong>: JavaScript, TypeScript, Node.js, Express.js, EJS, Docker</li>
+              </ul>
+            </div>
             <div class="resume-item">
               <h4>Full Stack Developer Intern at SAP Asia</h4>
               <h5>January 2021 - May 2021</h5>
